Show error when invalid address

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -304,7 +304,7 @@
     <string name="edit">Edit</string>
     <string name="leave_group_dialog_message">Are you sure you want to leave?</string>
     <string name="notifications">Notifications</string>
-    <string name="invalid_payment_address">Invalid payment address</string>
+    <string name="invalid_payment_address">You can only send tokens to an Ethereum address.</string>
     <string name="notification_toggle_error">Unable to update notifications</string>
     <string name="payment_error">Unable to send a payment to this address</string>
     <string name="done">Done</string>
