View erc20 token (#874)
* Add ViewERC20Activity

* Start ViewERC20Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -343,4 +343,5 @@
     <string name="empty_state_tokens_message">Share your wallet address to receive money and tokens.</string>
     <string name="share_wallet_address">Share Wallet Address</string>
     <string name="wallet_info">Receive Ethereum and tokens to your personal public address.</string>
+    <string name="receive">Receive</string>
 </resources>
