--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -334,7 +334,7 @@
     <string name="init_manager_error">Something went wrong. Please try again</string>
     <string name="tokens">Tokens</string>
     <string name="collectibles">Collectibles</string>
-    <string name="wallet_address">Wallet address</string>
+    <string name="wallet_address">Wallet Address</string>
     <string name="my_wallet">My Wallet</string>
     <string name="copy">Copy</string>
     <string name="wallet_address_error">Error while fetching wallet address</string>
@@ -356,4 +356,6 @@
     <string name="invalid_format">Invalid format</string>
     <string name="send_max_amount_title">The amount is not final</string>
     <string name="send_max_amount_message">Final transaction amount and network fees will be shown on the next screen</string>
+    <string name="wallet_address_dialog_message">Share your public wallet address to receive Ether and tokens.</string>
+    <string name="share">Share</string>
 </resources>
